--- a/roles/edge_proxy_haproxy/tasks/main.yml
+++ b/roles/edge_proxy_haproxy/tasks/main.yml
@@ -6,4 +6,4 @@
     owner: "{{ haproxy_config_owner }}"
     group: "{{ haproxy_config_group }}"
     mode: "{{ haproxy_config_mode }}"
-  notify: Reload HAProxy
+  notify: Apply HAProxy configuration
