--- a/roles/system_hardening/tasks/redhat.yml
+++ b/roles/system_hardening/tasks/redhat.yml
@@ -47,6 +47,18 @@
   loop: "{{ hardening_firewalld_ports_map.get('default') }}"
   when: ansible_facts.packages.get('firewalld') is defined
 
+- name: Allow published service ports via firewalld
+  ansible.posix.firewalld:
+    zone: "{{ hardening_firewalld_zone }}"
+    port: "{{ item }}"
+    permanent: true
+    state: enabled
+    immediate: true
+  loop: "{{ system_hardening_allowed_ports }}"
+  when:
+    - ansible_facts.packages.get('firewalld') is defined
+    - system_hardening_allowed_ports | length > 0
+
 - name: Reload firewalld configuration
   ansible.posix.firewalld:
     state: reloaded
