--- a/tests/render.yml
+++ b/tests/render.yml
@@ -2,12 +2,14 @@
 - name: Render sample service runtime
   hosts: localhost
   gather_facts: false
+  connection: local
   vars:
-    service_definition_file: "{{ service_definition_file | default('tests/sample_service.yml') }}"
+    render_service_definition_file: "{{ service_definition_file | default(playbook_dir ~ '/sample_service.yml') }}"
+    runtime: docker
   tasks:
     - name: Load service definition
       ansible.builtin.include_vars:
-        file: "{{ service_definition_file }}"
+        file: "{{ render_service_definition_file }}"
 
     - name: Render runtime configuration
       ansible.builtin.include_role:
