--- a/roles/common/apply_runtime/tasks/docker.yml
+++ b/roles/common/apply_runtime/tasks/docker.yml
@@ -2,20 +2,9 @@
 - name: Resolve Docker secrets
   set_fact:
     compose_secret_env: "{{ secrets.env if secrets is defined and secrets.env is not none and secrets.env | length > 0 else [] }}"
+    compose_secret_env_map: "{{ dict(compose_secret_env | map(attribute='name') | zip(compose_secret_env | map(attribute='value'))) if compose_secret_env | length > 0 else {} }}"
     compose_secret_files: "{{ secrets.files if secrets is defined and secrets.files is not none and secrets.files | length > 0 else [] }}"
-    compose_secret_env_path: "{{ runtime_output_dir }}/{{ service_name | default(service_id) }}.env"
     compose_secret_shred: "{{ secrets.shred_after_apply | default(true) if secrets is defined else true }}"
-
-- name: Write Compose secret environment file
-  copy:
-    dest: "{{ runtime_output_dir }}/{{ service_name | default(service_id) }}.env"
-    mode: '0600'
-    content: |-
-      {% for item in compose_secret_env %}
-      {{ item.name }}={{ item.value }}
-      {% endfor %}
-  when: compose_secret_env | length > 0
-  no_log: true
 
 - name: Ensure Compose secret directory exists
   file:
@@ -40,14 +29,8 @@
       - "{{ runtime_config_path | basename }}"
     state: present
     pull: always
-
-- name: Remove Compose secret environment file after apply
-  file:
-    path: "{{ compose_secret_env_path }}"
-    state: absent
-  when:
-    - compose_secret_shred | bool
-    - compose_secret_env | length > 0
+  environment: "{{ compose_secret_env_map if compose_secret_env_map else omit }}"
+  no_log: "{{ compose_secret_env | length > 0 }}"
 
 - name: Remove Compose secret files after apply
   file:
