--- a/roles/common/apply_runtime/tasks/secret_cleanup.yml
+++ b/roles/common/apply_runtime/tasks/secret_cleanup.yml
@@ -1,30 +1,30 @@
 ---
 - name: Remove secret environment file after apply
   ansible.builtin.file:
-    path: "{{ cleanup_secret_env_path }}"
+    path: "{{ cleanup_secret_context.env_path }}"
     state: absent
   when:
-    - cleanup_secret_shred | default(true) | bool
-    - cleanup_secret_env | default([]) | length > 0
-  become: "{{ cleanup_become | default(false) }}"
-  no_log: "{{ cleanup_env_no_log | default(false) }}"
+    - cleanup_secret_context.shred | default(true) | bool
+    - cleanup_secret_context.env | default([]) | length > 0
+  become: "{{ cleanup_secret_context.become | default(false) }}"
+  no_log: "{{ cleanup_secret_context.env_no_log | default(false) }}"
 
 - name: Remove secret files after apply
   ansible.builtin.file:
-    path: "{{ cleanup_secret_dir }}/{{ item.name }}"
+    path: "{{ cleanup_secret_context.directory }}/{{ item.name }}"
     state: absent
-  loop: "{{ cleanup_secret_files | default([]) }}"
+  loop: "{{ cleanup_secret_context.files | default([]) }}"
   when:
-    - cleanup_secret_shred | default(true) | bool
-    - cleanup_secret_files | default([]) | length > 0
+    - cleanup_secret_context.shred | default(true) | bool
+    - cleanup_secret_context.files | default([]) | length > 0
   no_log: true
-  become: "{{ cleanup_become | default(false) }}"
+  become: "{{ cleanup_secret_context.become | default(false) }}"
 
 - name: Remove secret directory after apply
   ansible.builtin.file:
-    path: "{{ cleanup_secret_dir }}"
+    path: "{{ cleanup_secret_context.directory }}"
     state: absent
   when:
-    - cleanup_secret_shred | default(true) | bool
-    - cleanup_secret_files | default([]) | length > 0
-  become: "{{ cleanup_become | default(false) }}"
+    - cleanup_secret_context.shred | default(true) | bool
+    - cleanup_secret_context.files | default([]) | length > 0
+  become: "{{ cleanup_secret_context.become | default(false) }}"
