--- a/tests/verify_secret_shredding.yml
+++ b/tests/verify_secret_shredding.yml
@@ -47,14 +47,15 @@
         content: "{{ item.value }}"
       loop: "{{ secret_file_entries }}"
 
-    - name: Include shared secret cleanup tasks
+    - name: Run shared secret cleanup tasks
       ansible.builtin.include_tasks: "{{ playbook_dir }}/../roles/common/apply_runtime/tasks/secret_cleanup.yml"
       vars:
-        cleanup_secret_env_path: "{{ secret_env_path }}"
-        cleanup_secret_env: "{{ secret_env_content }}"
-        cleanup_secret_files: "{{ secret_file_entries }}"
-        cleanup_secret_dir: "{{ secret_dir }}"
-        cleanup_secret_shred: true
+        cleanup_secret_context:
+          env_path: "{{ secret_env_path }}"
+          env: "{{ secret_env_content }}"
+          files: "{{ secret_file_entries }}"
+          directory: "{{ secret_dir }}"
+          shred: true
 
     - name: Assert environment secret file removed
       ansible.builtin.stat:
