--- a/roles/common/apply_runtime/tasks/docker.yml
+++ b/roles/common/apply_runtime/tasks/docker.yml
@@ -10,6 +10,18 @@
     compose_secret_env_path: "{{ runtime_output_dir }}/{{ service_name | default(service_id) }}.env"
 
 
+- name: Register Docker secret shredding handler
+  set_fact:
+    docker_secret_cleanup:
+      env_path: "{{ compose_secret_env_path }}"
+      env: "{{ compose_secret_env }}"
+      files: "{{ compose_secret_files }}"
+      directory: "{{ runtime_output_dir }}/secrets"
+      shred: "{{ compose_secret_shred }}"
+  when: compose_secret_env | length > 0 or compose_secret_files | length > 0
+  notify: docker runtime secret cleanup
+  changed_when: true
+
 - name: Ensure Compose secret directory exists
   file:
     path: "{{ runtime_output_dir }}/secrets"
@@ -46,16 +58,6 @@
     - compose_secret_shred | bool
     - compose_secret_files | length > 0
 
-
-
-- name: Remove Compose secrets after apply
-  ansible.builtin.include_tasks: secret_cleanup.yml
-  vars:
-    cleanup_secret_env_path: "{{ compose_secret_env_path }}"
-    cleanup_secret_env: "{{ compose_secret_env }}"
-    cleanup_secret_files: "{{ compose_secret_files }}"
-    cleanup_secret_dir: "{{ runtime_output_dir }}/secrets"
-    cleanup_secret_shred: "{{ compose_secret_shred }}"
 
 
 - name: Set service IP for health checks
