--- a/roles/common/apply_runtime/tasks/podman.yml
+++ b/roles/common/apply_runtime/tasks/podman.yml
@@ -22,6 +22,19 @@
       {{ quadlet_secret_env | reverse | unique(attribute='name') | reverse }}
   when: quadlet_secret_env | length > 0
 
+- name: Register Podman secret shredding handler
+  set_fact:
+    podman_secret_cleanup:
+      env_path: "{{ quadlet_env_path }}"
+      env: "{{ quadlet_secret_env }}"
+      files: "{{ quadlet_secret_files }}"
+      directory: "{{ quadlet_secret_dir }}"
+      shred: "{{ quadlet_secret_shred }}"
+      become: {{ (quadlet_effective_scope == 'system') | bool }}
+  when: quadlet_secret_env | length > 0 or quadlet_secret_files | length > 0
+  notify: podman runtime secret cleanup
+  changed_when: true
+
 - name: Ensure quadlet directory exists
   file:
     path: "{{ quadlet_base_dir }}"
@@ -77,16 +90,6 @@
     enabled: yes
     state: started
     scope: "{{ quadlet_effective_scope }}"
-
-- name: Remove Quadlet secrets after apply
-  ansible.builtin.include_tasks: secret_cleanup.yml
-  vars:
-    cleanup_secret_env_path: "{{ quadlet_env_path }}"
-    cleanup_secret_env: "{{ quadlet_secret_env }}"
-    cleanup_secret_files: "{{ quadlet_secret_files }}"
-    cleanup_secret_dir: "{{ quadlet_secret_dir }}"
-    cleanup_secret_shred: "{{ quadlet_secret_shred }}"
-    cleanup_become: {{ (quadlet_effective_scope == 'system') | bool }}
 
 - name: Set service IP for health checks
   set_fact:
