--- a/roles/common/apply_runtime/tasks/main.yml
+++ b/roles/common/apply_runtime/tasks/main.yml
@@ -3,9 +3,11 @@
   include_tasks: "{{ runtime }}.yml"
 
 - name: Health check after deployment
-  command: "{{ health.cmd[0] if health.cmd is defined else 'true' }}"
+  vars:
+    apply_runtime_health_command: {{ health | health_command }}
+  command: "{{ apply_runtime_health_command[0] }}"
   args:
-    argv: {{ health.cmd }}
+    argv: {{ apply_runtime_health_command }}
   delegate_to: "{{ service_ip | default(ansible_default_ipv4.address) }}"
   retries: {{ health.retries | default(3) }}
   delay: {{ health.interval | default('10s') | regex_replace('s$', '') | int }}
