--- a/roles/common/render_runtime/tasks/main.yml
+++ b/roles/common/render_runtime/tasks/main.yml
@@ -53,6 +53,19 @@
     - render_ephemeral_mount_paths is defined
     - render_ephemeral_mount_paths | length > 0
 
+- name: Enforce secret shredding waiver when disabled
+  assert:
+    that:
+      - secrets.shred_waiver_reason is defined
+      - (secrets.shred_waiver_reason | string | trim | length) > 0
+    fail_msg: >-
+      secrets.shred_after_apply cannot be set to false without documenting a
+      shred_waiver_reason that explains why persistent secret artifacts are acceptable.
+  when:
+    - secrets is defined
+    - secrets.shred_after_apply is defined
+    - not (secrets.shred_after_apply | bool)
+
 - name: Check if runtime is supported
   assert:
     that:
