Harden Docker runtime secrets and cleanup

--- a/roles/common/apply_runtime/tasks/secret_cleanup.yml
+++ b/roles/common/apply_runtime/tasks/secret_cleanup.yml
@@ -1,18 +1,20 @@
 ---
-- name: Remove secret environment file after apply
-  ansible.builtin.file:
-    path: "{{ cleanup_secret_context.env_path }}"
-    state: absent
+- name: Securely shred secret environment file after apply
+  ansible.builtin.command:
+    cmd: "shred --remove=unlink --zero {{ cleanup_secret_context.env_path }}"
+  args:
+    removes: "{{ cleanup_secret_context.env_path }}"
   when:
     - cleanup_secret_context.shred | default(true) | bool
     - cleanup_secret_context.env | default([]) | length > 0
   become: "{{ cleanup_secret_context.become | default(false) }}"
   no_log: "{{ cleanup_secret_context.env_no_log | default(false) }}"
 
-- name: Remove secret files after apply
-  ansible.builtin.file:
-    path: "{{ cleanup_secret_context.directory }}/{{ item.name }}"
-    state: absent
+- name: Securely shred secret files after apply
+  ansible.builtin.command:
+    cmd: "shred --remove=unlink --zero {{ cleanup_secret_context.directory }}/{{ item.name }}"
+  args:
+    removes: "{{ cleanup_secret_context.directory }}/{{ item.name }}"
   loop: "{{ cleanup_secret_context.files | default([]) }}"
   when:
     - cleanup_secret_context.shred | default(true) | bool
